--- a/tasks/hadoop.yml
+++ b/tasks/hadoop.yml
@@ -1,7 +1,7 @@
 # RedHat related OSs
 - name: Yum install ${item}
   action: yum pkg=${item} state=installed
-  only_if: $redhat_os
+  when: redhat_os
   with_items:
   - wget
   - tar
@@ -11,7 +11,7 @@
 # Debian related OSs
 - name: Apt install ${item}
   action: apt pkg=${item} state=installed
-  only_if: $debian_os
+  when: debian_os
   with_items:
   - wget
   - tar
