--- a/tasks/hadoop.yml
+++ b/tasks/hadoop.yml
@@ -1,6 +1,6 @@
 # RedHat related OSs
-- name: Yum install ${item}
-  action: yum pkg=${item} state=installed
+- name: Yum install {{ item }}
+  action: yum pkg={{ item }} state=installed
   when: redhat_os
   with_items:
   - wget
@@ -9,8 +9,8 @@
   - java-1.6.0-openjdk
   
 # Debian related OSs
-- name: Apt install ${item}
-  action: apt pkg=${item} state=installed
+- name: Apt install {{ item }}
+  action: apt pkg={{ item }} state=installed
   when: debian_os
   with_items:
   - wget
@@ -20,6 +20,6 @@
   
 - shell: wget -nd -r -l1 --no-parent ftp://ftp.rediris.es/mirror/Apache/hadoop/common/stable/ -A 'hadoop-1.?.?.tar.gz' && mv hadoop-1.?.?.tar.gz hadoop-1.X.tar.gz creates=/tmp/hadoop-1.X.tar.gz chdir=/tmp
 
-- shell: tar xzf /tmp/hadoop-1.X.tar.gz && ln -s /opt/hadoop-1.?.? $hadoop_home creates=$hadoop_home chdir=/opt
+- shell: tar xzf /tmp/hadoop-1.X.tar.gz && ln -s /opt/hadoop-1.?.? $hadoop_home creates={{ hadoop_home }} chdir=/opt
 
-- file: dest=/opt/hadoop src=$hadoop_home state=link
+- file: dest=/opt/hadoop src={{ hadoop_home }} state=link
