--- a/tasks/hadoop.yml
+++ b/tasks/hadoop.yml
@@ -18,7 +18,7 @@
   - gzip
   - openjdk-6-jre-headless
   
-- shell: wget -nd -r -l1 --no-parent ftp://apache.mirrors.pair.com/hadoop/core/stable1/ -A 'hadoop-1.?.?.tar.gz' && mv hadoop-1.?.?.tar.gz hadoop-1.X.tar.gz creates=/tmp/hadoop-1.X.tar.gz chdir=/tmp
+- shell: wget -nd -r -l1 --no-parent {{ mirrors[IM_NODE_NUM|int % mirrors|length] }} -A 'hadoop-1.?.?.tar.gz' && mv hadoop-1.?.?.tar.gz hadoop-1.X.tar.gz creates=/tmp/hadoop-1.X.tar.gz chdir=/tmp
 
 - shell: tar xzf /tmp/hadoop-1.X.tar.gz && ln -s /opt/hadoop-1.?.? $hadoop_home creates={{ hadoop_home }} chdir=/opt
 
