--- a/vars/os_defaults.yml
+++ b/vars/os_defaults.yml
@@ -1,2 +1,2 @@
 hadoop_home: /opt/hadoop-1.X
-mirrors: [ "ftp://apache.mirrors.pair.com/hadoop/core/stable1/", "http://mirror.cc.columbia.edu/pub/software/apache/hadoop/core/stable1/", "ftp://apache.cs.utah.edu/apache.org/hadoop/core/stable1/","ftp://ftp.cixug.es/apache/hadoop/core/stable1","ftp://apache.rediris.es/mirror/Apache/hadoop/core/stable1/" ]
+mirrors: [ "ftp://apache.mirrors.pair.com/hadoop/core/stable1/", "ftp://mirror.cc.columbia.edu/pub/software/apache/hadoop/core/stable1/", "ftp://apache.cs.utah.edu/apache.org/hadoop/core/stable1/","ftp://ftp.cixug.es/apache/hadoop/core/stable1","ftp://apache.rediris.es/mirror/Apache/hadoop/core/stable1/" ]
